# FreeDomCoin

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: Block.h  Blockchain.h  Transaction.h  Wallet.h  sha265.h
src/: Block.cpp  Blockchain.cpp  Transaction.cpp  Wallet.cpp  main.cpp
